# Surgical-Theatre

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: advanced_features.py  basic_usage.py  lora_integration.py
surgical_theater/: __init__.py  core.py
tests/: demo.ipynb  test_basic.py  test_bnb_int4.py  test_core.py  test_fsdp.py  test_surgical.py
