[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "surgical-theater"
version = "0.1.1"
description = "Zero-copy model validation during training"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "SurgicalTheater Contributors"},
]
keywords = [
    "pytorch",
    "machine-learning", 
    "deep-learning",
    "model-validation",
    "memory-optimization",
    "gpu-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
examples = [
    "transformers>=4.0.0",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/yourusername/surgical-theater"
"Bug Reports" = "https://github.com/yourusername/surgical-theater/issues"
Source = "https://github.com/yourusername/surgical-theater"

[tool.setuptools]
packages = ["surgical_theater"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true